--- a/receive/templates/receive/pages/receive.html
+++ b/receive/templates/receive/pages/receive.html
@@ -23,7 +23,7 @@
             <select name="type_payment_1" id="type_payment_1">
               <option value="">Selecione o Tipo de pagamento</option>
               {% for tipo_pagamento in tipos_pagamento %}
-                <option value="{{tipo_pagamento.id}}">{{tipo_pagamento.nome}}</option>
+                <option value="{{tipo_pagamento.nome}}">{{tipo_pagamento.nome}}</option>
               {% endfor %}
             </select>
           </div>
@@ -42,7 +42,7 @@
               <select name="type_payment_2" id="type_payment_2">
                 <option value="">Selecione o Tipo de pagamento</option>
                 {% for tipo_pagamento in tipos_pagamento %}
-                  <option value="{{tipo_pagamento.id}}">{{tipo_pagamento.nome}}</option>
+                  <option value="{{tipo_pagamento.nome}}">{{tipo_pagamento.nome}}</option>
                 {% endfor %}
               </select>
             </div>
