--- a/receive/templates/receive/pages/info_receive.html
+++ b/receive/templates/receive/pages/info_receive.html
@@ -1,11 +1,11 @@
-{% include "sales/partials/head.html" %}
+{% include "receive/partials/head.html" %}
 <body>
-  {% include "sales/partials/header.html" %}
+  {% include "receive/partials/header.html" %}
   <main>
     <div class="sub_menu">
-      <a href="/sales"><button>Painel</button></a>
+      <a href="receive/home"><button>Painel</button></a>
       <a href="/sale/new-sale"><button>Nova Venda</button></a>
-      <a href="/sales/searchsales"><button>Consultar Vendas</button></a>
+      <a href="receive/searchreceive"><button>Consultar Vendas</button></a>
     </div>
     <h1>{{nome}} - {{num_venda}}</h1>
     <div>
