--- a/client/templates/client/partials/header.html
+++ b/client/templates/client/partials/header.html
@@ -18,7 +18,7 @@
         <a class="nav-link"href="/nfe"><li>Entrada</li></a>
         <a class="nav-link"href="/employee"><li>Funcionario</li></a>
         <a class="nav-link"href="/payment"><li>Pagar</li></a>
-        <a class="nav-link"href="receive/home"><li>Receber</li></a>
+        <a class="nav-link"href="/receive/home"><li>Receber</li></a>
         <a class="nav-link"href="/supplier"><li>Fornecedor</li></a>
     </ul>
 </div>
