--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -6,7 +6,7 @@
 
 <body>
   
-  {% include "budget/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="content">
       <div class="sub_menu">
