--- a/stock/templates/stock/pages/new_product.html
+++ b/stock/templates/stock/pages/new_product.html
@@ -1,7 +1,7 @@
 {% include "stock/partials/head.html" %}
 <body>
 
-    {% include "stock/partials/header.html" %}
+    {% include "global/partials/header.html" %}
 
     <main>
         <div class="content">
