--- a/stock/templates/stock/pages/product.html
+++ b/stock/templates/stock/pages/product.html
@@ -1,6 +1,6 @@
 {% include "stock/partials/head.html" %}
 <body>
-    {% include "stock/partials/header.html" %}
+    {% include "global/partials/header.html" %}
     
     <main>
         <h1>Consultar Estoque</h1>
