--- a/supplier/templates/supplier/pages/details_supplier.html
+++ b/supplier/templates/supplier/pages/details_supplier.html
@@ -2,7 +2,7 @@
 <body>
 
 
-    {% include "supplier/partials/header.html" %}
+  {% include "global/partials/header.html" %}
 
     <main>
       <div class="content">
