--- a/supplier/templates/supplier/pages/register.html
+++ b/supplier/templates/supplier/pages/register.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% include "supplier/partials/head.html" %}
 <body>
-    {% include "supplier/partials/header.html" %}
+    {% include "global/partials/header.html" %}
     <main>
         <div class="content">
             <a href="/supplier"><button>Voltar</button></a>
