--- a/budget/templates/budget/pages/search_budget.html
+++ b/budget/templates/budget/pages/search_budget.html
@@ -3,7 +3,7 @@
 
 
 <body>
-    {% include "budget/partials/header.html" %}
+  {% include "global/partials/header.html" %}
  
    <main>
     <div class="sub_menu">
