--- a/client/templates/client/pages/details_client.html
+++ b/client/templates/client/pages/details_client.html
@@ -2,7 +2,7 @@
 <body>
 
 
-    {% include "client/partials/header.html" %}
+  {% include "global/partials/header.html" %}
 
     <main>
       <div class="content">
