--- a/client/templates/client/pages/register.html
+++ b/client/templates/client/pages/register.html
@@ -2,7 +2,7 @@
 {% include "client/partials/head.html" %}
 <body>
 
-    {% include "client/partials/header.html" %}
+    {% include "global/partials/header.html" %}
 
     <main>
         <div class="content">
