--- a/main/templates/main/pages/home.html
+++ b/main/templates/main/pages/home.html
@@ -1,10 +1,9 @@
 {% include "main/partials/head.html" %}
 
 <body>
-    {% include "main/partials/header.html" %}
+    {% include "global/partials/header.html" %}
     <main>
         <div class='content'>
-            <h1>pagina inincial</h1>
         </div>
         <footer>aqui é o footer</footer>
     </main>
