--- a/nfe/templates/nfe/pages/home.html
+++ b/nfe/templates/nfe/pages/home.html
@@ -1,7 +1,7 @@
 {% include "nfe/partials/head.html" %}
 <body>
   
-  {% include "nfe/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="content">
       <div class="sub_menu">
