--- a/nfe/templates/nfe/pages/nfes.html
+++ b/nfe/templates/nfe/pages/nfes.html
@@ -2,7 +2,7 @@
 {% include "nfe/partials/head.html" %}
 <body>
   
-  {% include "nfe/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="content">
       <div class="sub_menu">
