--- a/nfe/templates/nfe/pages/searchsales.html
+++ b/nfe/templates/nfe/pages/searchsales.html
@@ -1,6 +1,6 @@
 {% include "sales/partials/head.html" %}
 <body>
-  {% include "sales/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="sub_menu">
       <a href="/sales"><button>Painel</button></a>
