--- a/payment/templates/payment/pages/new_payment.html
+++ b/payment/templates/payment/pages/new_payment.html
@@ -1,6 +1,6 @@
 {% include "payment/partials/head.html" %}
 <body>
-  {% include "payment/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="content">
       <div class="sub_menu">
