--- a/sale/templates/sales/pages/home.html
+++ b/sale/templates/sales/pages/home.html
@@ -2,7 +2,7 @@
 {% include "sales/partials/head.html" %}
 <body>
   
-  {% include "sales/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="content">
       <div class="sub_menu">
