--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -1,8 +1,7 @@
 {% load static %}
 {% include "sales/partials/head.html" %}
 <body>
-  
-  {% include "sales/partials/header.html" %}
+  {% include "global/partials/header.html" %}
   <main>
     <div class="content">
       <div class="sub_menu">
