--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include "main/partials/head.html" %}
+{% include "global/partials/head.html" %}
 
 <div class="nav-bar">
     <ul class="nav-menu">
