--- a/budget/templates/budget/partials/head.html
+++ b/budget/templates/budget/partials/head.html
@@ -5,11 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "budget/css/body.css" %}">
-    <link rel="stylesheet" href="{% static "budget/css/global.css" %}">
-    <link rel="stylesheet" href="{% static "budget/css/container.css" %}">
-    <link rel="stylesheet" href="{% static "budget/css/header.css" %}">
-    <link rel="stylesheet" href="{% static "budget/css/footer.css" %}">
+    <link rel="stylesheet" href="{% static 'budget/css/container.css' %}">
+    <link rel="stylesheet" href="{% static 'budget/css/body.css' %}">
+    <link rel="stylesheet" href="{% static 'budget/css/global.css' %}">
+    <link rel="stylesheet" href="{% static 'budget/css/footer.css' %}">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    
+    
     
     <title>Document</title>
 </head>
