--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -19,7 +19,7 @@
         <div class="dados-orcamento">
             <!-- Área do Cliente -->
         <fieldset class='area-cliente'>
-          <div class="teste"></div>
+          
           <legend>Cliente</legend>
           <select name="cliente" id="cliente">
             <option value="" disabled {% if not selected_cliente %}selected{% endif %}>Selecione o Cliente</option>
@@ -98,8 +98,9 @@
         {% endif %}
       </form>
     </div>
-    
+    <div class="footer">
     <footer>Assinatura</footer>
+    </div>
   </main>
   <style>
     .content {
@@ -172,6 +173,12 @@
       text-align: center;
   }
   
+  .footer{
+    margin-top: 0px;
+    height: 1px;
+    padding-top: 0px;
+
+}
   
   </style>
   <script>
