--- a/employee/templates/employee/pages/new_employee.html
+++ b/employee/templates/employee/pages/new_employee.html
@@ -3,34 +3,126 @@
     {% include "global/partials/header.html" %}
 
     <main>
-        <div>
-            <h1>opa</h1>  <!-- Verifique se isso está correto -->
-            <a href="{% url 'employee_home' %}"><button>Painel</button></a>
-            <a href="{% url 'new_employee' %}"><button>Novo Funcionário</button></a>
+        <div class="content">
+            <div class="content-button">
+                <a href="{% url 'employee_home' %}"><button>Painel</button></a>
+                <a href="{% url 'new_employee' %}"><button>Novo Funcionário</button></a>
+    
+    
+                <a href="{% url 'search_employee' %}"><button>Consultar Funcionário</button></a>
+            <h1>Novo Funcionario</h1>  <!-- Verifique se isso está correto -->
 
-
-            <a href="{% url 'search_employee' %}"><button>Consultar Funcionário</button></a>
-                
+            
+        
 
         </div>
 
-        <div>
+        <div class="form">
+
             <form method="POST">
                 {% csrf_token %}
-                <input type="text" placeholder="Nome do funcionário" name="name" required>
+                <div class="form-input">
+            
+                <input class="input-nome" type="text" placeholder="Nome do funcionário" name="name" required>
+            
                 <input type="text" placeholder="Cargo do funcionário" name="cargo" required>
                 <label for="status">Ativo</label>
                 <input type="checkbox" name="status">
+                </div>
             
                 <button type="submit">Salvar</button>
             </form>
             
             
         </div>
+    </div>
 
-       
-        
+    <div class="footer">
+        <footer>footer aqui</footer>
+
+    </div>
     </main>
-    <footer>footer aqui</footer>
+    
+
+
+    <style>
+        .content {
+            width: 85vw;
+            height: 95vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5em;
+        }
+        .content-button{
+            display: flex;
+            margin-top: 10px;
+            gap: 5px;
+        }
+
+        .form {
+            display: flex;
+            flex-direction: column;
+            margin-right: 50px;
+            height: 40vh;
+            width: 70%;
+            padding: 70px;
+            border: 2px solid black;
+            border-radius: 10px;
+            gap: 1em;
+            align-items: center;
+            
+        }
+
+        .form-input {
+            display: flex;
+            width: 130%;
+            height: 3em;
+            padding: 0.5em;
+            gap: 20px;
+            
+        }
+        .input-nome {
+            width: 50%;
+            height: 100%;
+            padding: 0.5em;
+            
+
+        }
+
+
+
+        form button {
+            margin-top: 90px;
+            margin-left: 200px;
+            padding: 0.7em 1.5em;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        form button:hover {
+            background-color: #0056b3;
+        }
+
+        h1 {
+            display: flex;
+            margin-top: 50px;
+            margin-right: 300px;
+            font-size: 2em;
+            margin-bottom: 0.5em;
+            
+        }
+
+        .footer{
+            margin-top: 0px;
+            height: 1px;
+            padding-top: 0px;
+
+        }
+    </style>
 </body>
 </html>
