--- a/stock/templates/stock/pages/new_product.html
+++ b/stock/templates/stock/pages/new_product.html
@@ -5,12 +5,16 @@
 
     <main>
         <div class="content">
-            <h1>NEW PRODUCT</h1>
-
+              
             <div class="sub_menu">
                 <a href="{% url 'home' %}"><button type="button">Painel</button></a>
                 <a href="{% url 'product' %}"><button>Consultar Estoque</button></a>
             </div>
+            
+
+            <h1>NEW PRODUCT</h1>
+
+           
 
             {% if messages %}
                 <div class="messages">
@@ -63,8 +67,69 @@
                 </div>
             {% endif %}
         </div>
+        <div class="footer">
         <footer>rodape</footer>
+    </div>
     </main>
+
+
+
+    <style>
+        .content {
+            width: 85vw;
+            height: 95vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.1em;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            height: 80vh;
+            width: 90%;
+            padding: 10px;
+            border: 2px solid black;
+            border-radius: 10px;
+            gap: 1em;
+            align-items: center;
+        }
+
+        form input, form select {
+            width: 90%;
+            height: 0.3em;
+            padding: 0.5em;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        form button {
+            padding: 0.7em 1.5em;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        form button:hover {
+            background-color: #0056b3;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+
+        .footer{
+            margin-top: 0px;
+            height: 1px;
+            padding-top: 0px;
+
+        }
+    </style>
 
 </body>
 </html>
