--- a/budget/static/budget/css/header.css
+++ b/budget/static/budget/css/header.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 15vw;
-    height: 100vh;
+    height: auto;
     background-color:#04061d ;
 }
 .nav-menu{
