--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -10,78 +10,258 @@
         <a href="/sales/searchsales"><button>Consultar Vendas</button></a>
       </div>
       <h1>NEW SALE</h1>
-      <form action="/sale/salvar-carrinho/" method="post">
-        <!-- Select para Cliente -->
-<!-- Select para Cliente -->
-<select name="cliente" id="cliente">
-  <!-- Opção padrão -->
-  <option value="" disabled {% if not selected_cliente %}selected{% endif %}>Selecione o Cliente</option>
-  
-  <!-- Iteração sobre os clientes -->
-  {% for cliente in clientes %}
-      <option value="{{ cliente.id }}" {% if selected_cliente and cliente.id == selected_cliente.id %}selected{% endif %}>
-          {{ cliente.nome }}
-      </option>
-  {% endfor %}
-</select>
 
-<!-- Select para Vendedor -->
-<select name="vendedor" id="vendedor">
-  <!-- Opção padrão -->
-  <option value="" disabled {% if not selected_vendedor %}selected{% endif %}>Selecione o Vendedor</option>
-  
-  <!-- Iteração sobre os vendedores -->
-  {% for vendedor in vendedores %}
-      <option value="{{ vendedor.id }}" {% if selected_vendedor and vendedor.id == selected_vendedor.id %}selected{% endif %}>
-          {{ vendedor.nome }}
-      </option>
-  {% endfor %}
-</select>
-        <input name="id_produto" type="text" id="product_id" placeholder="ID do produto" onchange="fetchProductData(document.getElementById('product_id').value)">
-        <input name="Qntde" type="text" id="quantity" placeholder="Quantidade" onchange="price_finally()">
-        <input name="name" type="text" id="product_name" placeholder="Nome do produto" readonly>
-        <input name="valor" type="text" id="unit_price" placeholder="Preço Unitário" readonly onchange="price_finally()">
-        <input name="valor_total" type="text" id="total_price" placeholder="Preço Total" readonly>
-        <button type="submit">ADD Produto</button>
+      <!-- Formulário principal -->
+      <form action="/sale/salvar-carrinho/" method="post">
+        {% csrf_token %}
+        <div class="dados-orcamento">
+            <!-- Área do Cliente -->
+        <fieldset class='area-cliente'>
+          <div class="teste"></div>
+          <legend>Cliente</legend>
+          <select name="cliente" id="cliente">
+            <option value="" disabled {% if not selected_cliente %}selected{% endif %}>Selecione o Cliente</option>
+            {% for cliente in clientes %}
+              <option value="{{ cliente.id }}" {% if selected_cliente and cliente.id == selected_cliente.id %}selected{% endif %}>
+                  {{ cliente.nome }}
+              </option>
+            {% endfor %}
+          </select>
+        </fieldset>
+
+        <!-- Área do Vendedor -->
+        <fieldset class="area-vendedor">
+          <legend>Vendedor</legend>
+          <select name="vendedor" id="vendedor">
+            <option value="" disabled {% if not selected_vendedor %}selected{% endif %}>Selecione o Vendedor</option>
+            {% for vendedor in vendedores %}
+              <option value="{{ vendedor.id }}" {% if selected_vendedor and vendedor.id == selected_vendedor.id %}selected{% endif %}>
+                  {{ vendedor.nome }}
+              </option>
+            {% endfor %}
+          </select>
+        </fieldset>
+        </div>
+        
+        
+        
+        
+        <!-- Adicionar Produto -->
+        <fieldset class="carrinho">
+          <legend>Adicionar Produto</legend>
+          <div class="dado-produto">
+            <input name="id_produto" type="text" id="product_id" placeholder="ID do produto" onchange="fetchProductData(this.value)">
+            <input name="name" type="text" id="product_name" placeholder="Nome do produto" readonly>
+            <a class="link-estoque" href="#">Consultar estoque</a>
+          </div>
+
+          <div class="dado-produto">
+            <input name="Qntde" type="text" id="quantity" placeholder="Quantidade" onchange="price_finally()">
+          
+          <input name="valor" type="text" id="unit_price" placeholder="Preço Unitário" readonly onchange="price_finally()">
+          <input name="valor_total" type="text" id="total_price" placeholder="Preço Total" readonly>
+          <button type="submit" class="add"><img class="icons" src="{% static "/img/add.png" %}" alt=""></button>
+          </div>
+          
+          
+        </fieldset>
       </form>
-      <p>{{response}}</p>
-<h2>Carrinho Salvo</h2>
-<table id="tabela-carrinho">
-  <thead>
-    <tr>
-      <th>Produto</th>
-      <th>Quantidade</th>
-      <th>Valor Unitário</th>
-      <th>Valor Total</th>
-      <th>Option</th>
-    </tr>
-  </thead>
-  <tbody id="dados">
-    {% for item in cart  %}
-    <tr>
-      <td>{{item.name_product}}</td>
-      <td>{{item.quantidade}}</td>
-      <td>{{item.valor_uni}}</td>
-      <td>{{item.valor_total}}</td>
-      <td><a href="{% url 'excluir_produto' item.id %}">excluir</a></td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-      <form id="sale_form" action="sale/new_sale/concluido/" method="post">
-        {% if button_enviar %}
-        <button button type="submit">efetuar aprovação</button>
-        {% endif %}
-      </form> 
-      <form action="enviar_orcamento" method="post">
-        {% if button_enviar %}
-         <button button type="submit">Enviar Orçamento</button>
-            {% endif %}
-      </form>
+      
+      <!-- Mensagem de resposta -->
+      <div class="response-message">{{ response }}</div>
+      
+      <!-- Carrinho -->
+      <fieldset class="infos">
+        <legend>Carrinho</legend>
+        <table id="tabela-carrinho">
+          <thead>
+            <tr>
+              <th>Produto</th>
+              <th>Quantidade</th>
+              <th>Valor Unitário</th>
+              <th>Valor Total</th>
+              <th>Opção</th>
+            </tr>
+          </thead>
+          <tbody id="dados">
+            {% for item in cart %}
+              <tr>
+                <td>{{ item.name_product }}</td>
+                <td>{{ item.quantidade }}</td>
+                <td>{{ item.valor_uni }}</td>
+                <td data-valor="{{ item.valor_total }}">{{ item.valor_total }}</td>
+                <td><a href="/sale/excluir_produto/{{item.id}}/"><img class='icons' src="{% static "/img/remove.png" %}" alt=""></a> <a href=""><img class='icons' src="{% static "/img/edit.png" %}" alt=""></a></td>
+                
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </fieldset>
+      
+      <!-- Opções de envio -->
+       <div class="action_button">
+        <form class="form_button" action="enviar_orcamento" method="post">
+          {% csrf_token %}
+          
+            <button class="enviar"  type="submit">Enviar Orçamento</button>
+    
+        </form>
+        <form class="form_button" action="sale/new_sale/concluido/" method="post">
+          {% csrf_token %}
+            <button class="enviar"  type="submit">Efetuar Venda</button>
+        </form>
+        <button class="enviar">Cancelar</button>
+       </div>
     </div>
     <footer>Assinatura</footer>
   </main>
   <script src="{% static 'sale/js/sales.js' %}"></script>
+  <style>
+   
+    .content {
+      width: 85vw;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+    
+
+    }
+    .dados-orcamento{
+      display: flex;
+      gap: 1em;
+    }
+  .area-cliente{
+      padding: 20px;
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      border: 2px solid black;
+      margin-left: 2em;
+  }
+  .area-cliente select{
+    width: 80%;
+    height: 3em;
+  }
+  .area-vendedor{
+    padding: 20px;
+      width: 70%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      border: 2px solid black;
+      margin-right: 2em;
+  }
+
+  .area-vendedor select{
+    width: 80%;
+    height: 3em;
+  }
+  .response-message {
+      color: green; /* ou red para erros */
+      font-weight: bold;
+  }
+  .carrinho{
+      padding: 20px;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1em;
+      border-radius: 10px;
+      border: 2px solid black;
+      margin-bottom: 0.5em;
+      margin-left: 3em;
+  }
+  .dado-produto{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+  }
+  .link-estoque{
+    background-color: #fff;
+    height: 2.2em;
+    text-align: center;
+    padding-top: 0.5em;
+    text-decoration: none;
+    color: black;
+    margin-right: 6em;
+  }
+  .dado-produto input{
+    height: 2.2em;
+  }
+  .dado-produto button{
+    height: 2.2em;
+  }
+  .add{
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+  }
+  .infos{
+    padding: 20px;
+      width: 90%;
+      border-radius: 10px;
+      border: 2px solid black;
+      margin-bottom: 0.5em;
+      margin-top: 2em;
+      margin-left: 2em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+  #tabela-carrinho th, #tabela-carrinho td {
+      padding: 8px;
+      text-align: center;
+      border: 1px solid black;
+      width: 12em;
+  }
+  .delete_cart{
+    color: black;
+  }
+  .edit-item{
+    color: black;
+  }
+  .enviar{
+            padding: 0.7em 1.5em;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 1em;
+  }
+  .action_button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+  }
+  .icons{
+    width: 2em;
+    margin-left: 2em;
+  }
+  </style>
+  <script>
+    $(document).ready(function() {
+        $('#cliente').select2();
+        $('#vendedor').select2();
+    });
+  </script>
+  
+  <script src="{% static 'budget/js/new_budget.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=edit" />
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=delete_forever" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </body>
 </html>
 
